﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-06-09 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_select.php: bug #1490569, search with LIKE on numeric fields
    * libraries/import.lib.php: support display of HANDLER statement results

2006-06-08 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/header.inc.php: bug #1501891, undefined PMA_isSuperuser() when 
      the default server is 0

2006-06-06 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: various fixes, thanks to Cedric Corazza

2006-06-02 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/auth/cookie.auth.lib.php: for auth_type='cookie', avoid
      showing the "cookies must be enabled" message if they are enabled
    * Documentation.html: requirements: web browser with cookies enabled
    * libraries/header.inc.php: show message about cookies also
      when auth_type = http or config

2006-05-31 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1498108, support twice the separator
      in db name, thanks to Sylvain Derosiaux

2006-05-30 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/french*: updates
    * querywindow.php: $is_superuser was not defined
    * sql.php: bug #1490422, lost connection to MySQL server (SELECT DISTINCT)

2006-05-30 Michal Čihař  <michal@cihar.com>
    * libraries/export/sql.php: Fix handling of backquotes (bug #1497239).
    * libraries/export/xml.php: Fix export to XML (bug #1497239).
    * libraries/plugin_interface.lib.php: Show that plugin has no option if it
      has only hidden inputs.
    * sql.php: Do not compare db if not defined.
    * server_binlog.php, server_processlist.php: No need to grab all results
      to memory.
    * libraries/export/htmlexcel.php: Fix extension (bug #1497239).
    * libraries/export/csv.php: Handle correctly AUTO (bug #1497239).
    * lang/*: Remove obsolete messages, add missing ones.
    * lang/czech: Updated.