@@ -8,6 +8,9 @@ $Source$
 2006-06-09 Marc Delisle  <lem9@users.sourceforge.net>
     * tbl_select.php: bug #1490569, search with LIKE on numeric fields
     * libraries/import.lib.php: support display of HANDLER statement results
+    * libraries/header.inc.php, libraries/auth/http.auth.lib.php,
+      /cookie.auth.lib.php, removed header_custom.inc.php: 
+      patch #1502453, unnecessary disk access, thanks to Juergen Wind
 
 2006-06-08 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/header.inc.php: bug #1501891, undefined PMA_isSuperuser() when 
